# Bang_Bang

./: .gitignore
bangService/: Cargo.toml
bangService/src/: lib.rs  main.rs  store.rs
bangService/src/net/: http.rs  socket.rs
service/: Cargo.toml
service/src/: main.rs
webClient/: index.html
webClient/scripts/: core.js  main.js  map.js  pageScript.js  render.js  utils.js
webClient/scripts/net/: http.js  socket.js
webClient/scripts/player/: player.js
webClient/scripts/utils/: keyboardEvents.js  pageLoading.js  socketEvents.js
webClient/style/: animation.css  game-index.css  game-room.css  join-room.css  loading.css  new-game-room-dialog.css  root.css
