[package]
name = "bang_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
futures = "0.3"
tungstenite = "0.14"
tokio-tungstenite = "0.14"
redis = "0.23.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures-channel = "0.3.28"

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]